other-cel/require-image-checksum/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-image-checksum
policies:
- ../require-image-checksum.yaml
resources:
- resource.yaml
results:
- kind: CronJob
  policy: require-image-checksum
  resources:
  - hello
  result: fail
  rule: require-image-checksum
- kind: Pod
  policy: require-image-checksum
  resources:
  - myapp-pod-2
  result: fail
  rule: require-image-checksum
- kind: Deployment
  policy: require-image-checksum
  resources:
  - mydeploy
  result: pass
  rule: require-image-checksum
- kind: Pod
  policy: require-image-checksum
  resources:
  - myapp-pod-1
  result: pass
  rule: require-image-checksum
